--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="./assets/imgs/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/imgs/favicon.ico" type="image/x-icon">
         <title>React广告推流项目</title>
     </head>
     <body>
